--- a/goodbye.html
+++ b/goodbye.html
@@ -4,5 +4,5 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
-  <li> German:  Auf Wiedersehen, fruenden! </li>
+  <li> German:  Auf Wiedersehen, freunden! </li>
 </ul>
